--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,14 @@ header {
     height: 150px;
 }
 
-
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-family: 'Cormorant';
+    margin-top: 1em;
+    margin-bottom: 3em;
+    font-size: 16pt;
+}
 
 
