--- a/css/styles.css
+++ b/css/styles.css
@@ -2,479 +2,176 @@
 
 body {
     font-family: 'Barlow Semi Condensed';
+    border-left: 30px solid #48605B;
+    border-right:30px solid #48605B;
 }
 
-/* Header */
-header {
-    font-family: 'Barlow Semi Condensed';
+
+/*Enter*/
+
+.light {
+    background-color:#fbf3e5
+}
+
+.nooverflow {
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.enterimages {
     display: flex;
     flex-direction: row;
-    align-items: center;  
-    width: 100%;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    text-align: center;
+    justify-content: center;
 }
 
-.logobox {
-    margin-left: 10em;
-    display: flex; 
-    flex-direction: row;
-    width: 100%;
+.CPlogo img{
+    height: 500px;
 }
 
-.logo {
-    font-size: 36px;
+.CRlogo img{
+    height: 500px;
+    margin-top: 20%;
+}
+
+
+
+/* Header */
+.siteTitle {
     font-family: Cormorant;
-    text-decoration: none;
-    color: #1e222d;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0% 20% 0% 10%;
+    padding: 2% 0% 2% 0%;
+}
+
+header {
+    background-image: url(/images/gradient_horizontal_wallpaper_sunset_reef.png);
 }
 
 nav {
+    font-family: Cormorant;
+    font-size: 28px;
     display: flex;
-    font-family: 'Cormorant';
-    font-size: 20pt;
-    width: 100%;
+    flex-direction: row;
 }
 
 nav a {
     margin: 0% 5% 0% 5%;
     text-decoration: none;
-    color: #1e222d;
+    color: black;
 }
 
-/* Footer */
-
-footer {
-    background-color: #1e222d;
-    color: #ffffff;
-    font-family: Barlow Semi Condensed;
-    font-size: 20pt;
-    padding-top: 20pt;
-    padding-bottom: 80px;
-    padding-left: 2%;
-    text-align: left;
+.name {
+    text-decoration: none;
+    font-size: 24pt;
+    color: black;
+    font-weight: 700;
 }
 
-footer p{
-    margin-bottom: 0;
-}
+/*Index*/
 
-/* Index/Home */
-
-.light {
-    background-color: #fbf3e5
-}
-
-main {
-    font-family: Barlow Semi Condensed;
+.heroTitle {
     font-size: 22pt;
     text-align: center;
+    margin: 5% 12% 0% 12%;
+    line-height: 130%;
 }
 
-.hero {
-    height: 800px;
+.heroTitle2 {
+    font-size: 22pt;
+    text-align: center;
+    margin: 0% 12% 5% 12%;
+    line-height: 130%;
+}
+
+.bubbles img{
+    width: 60%;
+}
+
+.bubbles {
+    text-align: center;
+}
+
+.imageAcross img{
+    width: 100%;
+    margin-bottom: 5%;
+}
+
+.indexInfo p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 20pt;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.indexInfoRight {
     display: flex;
     flex-direction: row;
-    font-family: Cormorant;
-}
-
-.hero img {
-    height: 40em;
-    margin-top: -5em;
-    margin-bottom: 10em;
-}
-
-.herotext {
-    margin: 10% 5% 0% 5%;
-    line-height: 2;
-    letter-spacing: 0.08em;
-}
-
-.hero div {
-    text-align: justify;
-}
-
-.subtitle {
-    font-family: Cormorant;
-    font-size: 50pt;
-    text-align: center;
-    height: 300px;
-    display: flex; 
     align-items: center;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 5%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
-    letter-spacing: 0.08em;
 }
 
-.offerBlock {
-    -webkit-animation: bgcolor 100s infinite;
-    animation: bgcolor 50s infinite;
-    -webkit-animation-direction: alternate;
-    animation-direction: alternate;
-    margin-bottom: 50px;
-}
-
-@keyframes bgcolor {
-    0% {
-        background-color: #a1e4b1
-    }
-
-    30% {
-        background-color: #6b9976
-    }
-
-    60% {
-        background-color: #ffa658
-    }
-
-    90% {
-        background-color: #a1e4b1
-    }
-
-    100% {
-        background-color: #6b9976
-    }
-}
-
-.bold {
-    font-size: 30pt;
-    font-weight: 900;
-}
-
-.herotext div {
-    line-height: 1.5;
-}
-
-.subtitle2 {
-    height: 150px;
-    margin-left: 25%;
-    margin-right: 25%;
-    padding-bottom: 2%;
-}
-
-.container1 {
-    overflow: hidden;
-}
-
-.marquee-items {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding-bottom: 3em;
-  font-family: Cormorant;
-  font-size: 35px;
-  text-transform: uppercase;
-}
-
-.marquee-items p {
-    margin-right: 2em;
-    margin-left: 2em;
+.indexInfoLeft {
     display: flex;
-    text-align: center;
+    flex-direction: row;
+    align-items: center;
 }
 
-.marquee {
-  display: flex;
-  width: 200%;
-  animation: marqueeSlide 20s linear infinite;
+.indexInfoRight img{
+    height: 250px;
+
 }
 
-@keyframes marqueeSlide {
-    from { transform: translateX(0); }
-    to { transform: translateX(-50%); }
+.indexInfoLeft img{
+    height: 250px;
 }
 
-
-.subtitle3 {
-    margin-top: 100px;
-    font-size: 28pt;
-    margin-right: 12%;
-    margin-left: 12%;
-    padding-bottom: 100px;
-    text-align: justify;
+.indexInfoTitle {
+    font-weight: 500;
 }
 
+/*About*/
 
-.below {
-    padding-top: 200px;
-}
-
-.twocolumntitle {
-    font-family: Cormorant;
-    font-size: 40pt;
-    font-weight: 900;
-    letter-spacing: 0.08em;
-}
-
-.infoTextBox {
-    background-color:#6b9976;
-    color: white;
-    padding-top: 3em;
-    padding-bottom: 5em;
-}
-
-.infoTextColumn {
-    text-align: justify;
-}
-
-.left {
-    margin-left: 45%;
-    margin-right: 20%;
-    padding-top: 2em;
-}
-
-.right {
-    margin-left: 20%;
-    margin-right: 45%;
-    padding-top: 2em;
-}
-
-.photoColumn {
+.aboutField {
     display: flex;
     flex-direction: row;
 }
 
-.photoColumn img {
-    height: 800px;
+.headshotImage img {
+    width: 350px;
+    padding: 20% 15% 0% 35%;
 }
 
-
-/*CR*/
-
-.dark {
-    background-color: #fbf3e5;
+.bioText {
+    margin: 5% 5% 0% 20%;
 }
 
-
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-
+.bioText h1 {
+    font-family: 'Cormorant';
+    font-size: 36pt;
+    margin-bottom: 0px;
 }
 
-
-
-.yogaBody {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    background-color: #fbf3e5;
-    background-image: url(../images/blank_gradient_circle_reef_sky_half.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    background-position: bottom;
-}
-
-.circlerow {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.circlerow img{
-    padding-bottom: 2em;
-    height: 50em;
-}
-
-.yogablocks {
-    display: flex;
-    flex-direction: column;;
-    align-items: center;
-    margin-right: 2em;
-    margin-left: 2em;
-    font-size: 28px;
-}
-
-.CRbodytext {
-    font-family: Cormorant;
-    font-size: 25pt;
-    margin-left: 25%;
-    margin-right: 25%;
-    padding-bottom: 2%;
-    z-index: 1;
-}
-
-.CRtitle {
-    font-family: Barlow Semi Condensed;
-    margin-top: 100px;
-    font-size: 40pt;
-    margin-bottom: 0;
-}
-
-.CRimage {
-    height: 200px;
-}
-
-.CRinfo {
-    margin-right: 30%;
-    margin-left: 30%;
-}
-
-.CRinfo p {
+.bioText h2 {
+    font-family: 'Cormorant';
+    font-size: 24pt;
+    font-weight: 500;
+    margin-top: 0px;
     padding-top: 0px;
 }
 
-.circleBody {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10em;
-}
-
-.circlecontainer {
-    position: relative;
-    width: 300px;
-    height: 150px; /* Height should be enough to fit the half-circle and circles */
-}
-
-.half-circle {
-    position: absolute;
-    bottom: 0%;
-    left: 50%;
-    width: 600px;
-    height: 300px;
-    background-color: #646f8d;
-    border-radius: 300px 300px 0 0;
-    transform: translateX(-50%);
-    z-index: 1;
-}
-
-.circles {
-    position: absolute;
-    bottom: -50px; /* Position the circles to be above the half-circle */
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.circle {
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    background-color: #646f8d;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    transition: all 0.3s ease;
-    text-align: center;
-    font-size: 15pt;
-}
-
-.circle:hover {
-    width: 200px;
-    height: 200px;
-    background-color: #31302d;
-    z-index: 2;
-}
-
-.circle::after {
-    content: attr(data-text);
-    display: block;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    font-size: 12px;
-}
-
-.circle:hover::after {
-    opacity: 1;
-}
-
-/* Position the circles in a half-circle arc */
-.circle:nth-child(1) { 
-    transform: rotate(calc(180deg * 6 / 4)) translateY(-400px) rotate(calc(-180deg * 6 / 4)); 
-}
-.circle:nth-child(2) { 
-    transform: rotate(calc(180deg * 7 / 4)) translateY(-400px) rotate(calc(-180deg * 7 / 4)); 
-}
-.circle:nth-child(3) { 
-    transform: rotate(calc(180deg * 8 / 4)) translateY(-400px) rotate(calc(-180deg * 8 / 4)); 
-}
-.circle:nth-child(4) { 
-    transform: rotate(calc(180deg * 9 / 4)) translateY(-400px) rotate(calc(-180deg * 9 / 4)); 
-}
-.circle:nth-child(5) { 
-    transform: rotate(calc(180deg * 10 / 4)) translateY(-400px) rotate(calc(-180deg * 10 / 4)); 
-}
-
-
-
-
-
-
-/*about*/
-
-.aboutbackground {
-   background-image: url("../images/blank_gradient_circle_reef_sunset_half.png");
-   background-repeat: no-repeat;
-   background-position: right;
-   background-size: contain;
-}
-
-.bioSection {
-    display: flex;
-    flex-direction: row;
-    margin-top: 100px;
-    text-align: justify;
-    margin-right: 10%;
-}
-
-.bioSection img {
-    height: 500px;
-    margin-left: 20%;
-    margin-right: 5%;
-}
-
-.bioTitle {
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: left;
-    font-family: Cormorant;
-    font-size: 45pt;
-    font-weight: 900;
-}
-
-.bioRole {
-    font-family: Cormorant;
-    font-size: 28pt;
-    margin-top: 0;
-}
-
-.collaboratorTitle {
-    font-family: Cormorant;
-    font-size: 28pt;
-    margin-top: 100px;
-    font-weight: 900;
-}
-
-.collaboratorText {
-    margin-left: 30%;
-    margin-right: 30%;
+.bioText p {
     font-size: 20pt;
-    margin-bottom: 100px;
+    font-weight: 300;
 }
 
 .testimonialBlockleft img {
     border-radius: 50%;
-    margin-left: 20%;
+    margin-left: 15%;
+    height:200px;
 }
 
 .testimonialBlockleft p {
@@ -497,143 +194,81 @@ main {
 
 .testimonialBlockright img {
     border-radius: 50%;
-    margin-right: 20%;
+    margin-right: 15%;
+    height: 200px;
 }
 
 .testimonialBlockright p {
     margin-left: 15%;
     margin-right: 5%;
-    text-align: justify;
+    text-align: right;
 }
 
-/*Projects*/
+.testimonialTitle {
+    display: flex;
+    flex-direction: row;
+    font-family: 'Cormorant';
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+}
 
-.mainimage {
-    height: 300px;
-    margin-left: 15%;
+.testimonialTitle h1 {
+    margin: 0% 5% 0% 5%;
+}
+
+.testimonialTitle img {
+    height: 50px;
+}
+ 
+.bold {
+    font-weight: 700;
+}
+
+/*projects*/
+
+.projectBlock img {
+height: 250px;
 }
 
 .projectbody {
-    background-image: url(../images/blank_gradient_circle_reef_sunset.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    background-position: top;
-}
-
-
-.mainproject {
     display: flex;
-    flex-direction: row;
-    background-color: #77A0B3;
-    margin-bottom: 30px;
-    align-items: center;
+    flex-direction: row; 
+    justify-content: space-around;
 }
 
-.maininfo {
-    margin-right: 15%;
-    padding-left: 8%;
-    background-color: #77A0B3;
-    color: white;
-    display: flex;
-    flex-direction: column;
-   text-align: left;
-}
-
-.maintitle {
+.projectTitle {
     font-family: Cormorant;
-    margin-bottom: 0;
-    font-weight: 900;
-    margin-top: 2em;
-    color: white;
+    font-size: 36pt;
+    text-align: center;
+    margin-bottom: 5%;
 }
 
-.mainsubtitle {
-    font-family: Cormorant;
-    margin-top: 0;
+.CRheader {
+    background-image: url(/images/cr_gradiant.png);
 }
 
-.mainabout {
-    font-size: 18pt;
-    text-align: justify;
+.crAbout {
+    font-family: "Barlow Semi Condensed";
+    font-weight: 300;
+    margin: 5% 12% 5% 12%;
+    text-align: center;
 }
 
-.projectimage {
-    height: 500px;
-}
-
-.image {
-    display: block;
+.yogaImage {
     width: 100%;
-    height: auto;
-  }
-  
-  .container {
-    position: relative;
-    width: 25%;
-    margin-left: 16%;
-    margin-bottom: 2%;
-  }
+}
 
- .crciproject .overlay {
-    background-color: #35858a;
+.yogaToken {
+    height: 100px;
+    margin-left: 50%;
+    margin-right: 50%;
+    margin-top: 5%;
+}
 
- } 
+/*contact*/
 
-  .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #008CBA;
-  }
-
-  .project2 .overlay {
-    background-color: black;
-  }
-
-  .project2 img {
-    padding-top: 2em;
-  }
-
-
-  
-  .container:hover .overlay {
-    opacity: 1;
-  }
-  
-  .text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: justify;
-  }
-
-  .projectBlocks {
-    display: flex;
-    flex-direction: row;;
-  } 
-
-  /*Contact FAQ*/
-
-  .contactbackground {
-    background-image: url("../images/blank_gradient_circle_reef_sunset_half_left.png");
-    background-repeat: no-repeat;
-    background-position: left;
-    background-size: contain;
- }
-
-  .collapsible {
+.collapsible {
     background-color: #ffa658;
     color: #ffffff;
     cursor: pointer;
@@ -697,82 +332,16 @@ main {
     margin-bottom: 100px;
   }
 
-  /*Media Queries*/
-
-  /*Mobile*/ 
-
-  @media (max-width: 450px) {
-    .hero img {
-    height: 25em;
-    margin-left: 0;
-    margin-top: 2%;
-}
-
-
+  .getintouch {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
   }
 
-
-  /*MEDIA QUERIES*/
-
-  @media (max-width: 1800px) {
-    .hero img {
-        height: 25em;
-        margin-top: 0em;
-        margin-bottom: 10em;
-    }
-
-    .logobox {
-        margin-left: 10em;
-        display: flex;
-        flex-direction: row;
-        width: 50%;
-    }
-
-    .subtitle {
-        font-family: Cormorant;
-        font-size: 40px;
+  .faqtitle {
+      text-align: center;
   }
-     .photoColumn img {
-         height: 500px;
-}
-    .subtitle3 {
-    margin-top: 0px;
-    }
 
-
-}
-
-
-
-@media (max-width: 1200px) {
-    .hero img {
-        height: 20em;
-        margin-top: 0em;
-        margin-bottom: 10em;
-    }
-
-    .logobox {
-        margin-left: 10em;
-        display: flex;
-        flex-direction: row;
-        width: 30%;
-    }
-    .herotext {
-        margin: 10% 5% 0% 5%;
-        line-height: 1.5;
-        letter-spacing: 0.08em;
-        font-size: 20pt;
-    }
-    .subtitle {
-        font-family: Cormorant;
-        font-size: 30px;
+  .faqtitle a {
+      margin-bottom: 0;
   }
-     .photoColumn img {
-         height: 300px;
-}
-    .subtitle3 {
-    margin-top: 0px;
-    }
-
-
-}
